--- a/app/+register/register-model.component.html
+++ b/app/+register/register-model.component.html
@@ -1,8 +1,13 @@
 <ion-toolbar>
+  <ion-buttons start>
+    <button (click)="close()">
+      <ion-icon name="close"></ion-icon>
+    </button>
+  </ion-buttons>
   <ion-title>Registration</ion-title>
 </ion-toolbar>
 <ion-content>
-  <form [ngFormModel]="form" id="register">
+  <form [ngFormModel]="form" id="register" (ngSubmit)="form.valid && form.value.tac">
     <ion-list>
       <ion-item *ngFor="let name of controlNames">
         <ion-label floating>{{name}}</ion-label>
@@ -20,5 +25,5 @@
   </form>
 </ion-content>
 <ion-toolbar position="bottom">
-  <button block for="register">Register</button>
+  <button block for="register" [disabled]="!form.valid || !form.value.tac">Register</button>
 </ion-toolbar>
