add event detail page, show markers and so on

--- a/app/+home/home.component.html
+++ b/app/+home/home.component.html
@@ -16,6 +16,6 @@
 
 <ion-content class="getting-started">
 
-  <div google-maps></div>
+  <div google-maps [events]="events" (markerClicked)="showDetail($event)"></div>
 
 </ion-content>
