--- a/app/+event/event.component.html
+++ b/app/+event/event.component.html
@@ -1,7 +1,8 @@
-<ion-navbar *navbar>
-  <ion-title>{{event?.name}}</ion-title>
-</ion-navbar>
-
+<ion-header>
+  <ion-navbar>
+    <ion-title>{{event?.name}}</ion-title>
+  </ion-navbar>
+</ion-header>
 <ion-content padding>
 
   <h1>{{event?.name}}</h1>
