--- a/app/+events/events.component.html
+++ b/app/+events/events.component.html
@@ -1,10 +1,11 @@
-<ion-navbar *navbar>
-  <button menuToggle>
-    <ion-icon name="menu"></ion-icon>
-  </button>
-  <ion-title>Humane</ion-title>
-</ion-navbar>
-
+<ion-header>
+  <ion-navbar>
+    <button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>Humane</ion-title>
+  </ion-navbar>
+</ion-header>
 <ion-searchbar
   [(ngModel)]="searchString"
   (ionInput)="onInput($event)"
